@@ -1,0 +1,2 @@
+BEGIN { FS = "\0" ; RS = "" }
+{ print $2 }
