@@ -1,3 +1,8 @@
+2016-05-30         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (fsnul1): New test.
+	* fsnul1.awk, fsnul1.in, fsnul1.ok: New files.
+
 2016-05-25         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* arrayind1.awk: Flush writes to stderr. We hope this helps
