@@ -3,6 +3,11 @@
 	* main.c (arg_assign): Fully bracket ifdefs around call
 	to force_number. Thanks to Andrew Schorr for pointing out
 	that force_number was called only if LC_NUMERIC was defined.
+	
+	Lots of files: Update copyright date.
+
+	* field.c (set_FS): Handle FS = "\0" if RS = "". Thanks to
+	Janis Papanagnou for the report.
 
 2016-05-26         Andrew J. Schorr     <aschorr@telemetry-investments.com>
 
